# CarDiag-RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo_outputs/: brake.txt  hpfp.txt  rollaway.txt
eval/: recall_queries.jsonl  recall_queries_100_fixed.jsonl  recall_queries_hard.jsonl
eval/results/: hybrid_rerank.jsonl  hybrid_rerank_top20_full_inputs.jsonl  rerank_failure_compact_debug.jsonl  rerank_smart_airbag_debug.jsonl  retrieval_debug.jsonl  retrieval_debug_alpha0.10.jsonl  retrieval_debug_alpha0.30.jsonl  retrieval_debug_alpha0.50.jsonl  retrieval_debug_alpha0.70.jsonl
scripts/: analyze_failures.py  run_eval.sh  run_rerank_tests.sh  spot_checks.sh
src/carrecall_rag/: __init__.py  answer.py  bm25_sanity.py  build_corpus.py  build_corpus_global.py  build_triples.py  config.py  demo.py  demo_rag.py  demo_retrieve.py  eval.py  eval_biencoder.py  eval_retrieval.py  fix_eval_queries.py  generate_eval_queries.py  global_recalls.py  model_resolver.py  nhtsa.py  nhtsa_api.py  rag_answer.py  rerank.py  retrieve.py  train_biencoder.py  utils.py
tests/: test_demo_output_format.py
