[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carrecall-rag"
version = "0.1.0"
description = "CarRecall-RAG: NHTSA complaints and recalls retrieval baseline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
    "tqdm",
    "rank-bm25",
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
]

[project.scripts]
carrecall-demo = "carrecall_rag.demo_rag:main"

[tool.setuptools.packages.find]
where = ["src"]
